@@ -7,6 +7,13 @@ Options
 ** New: View records of Attempts, Kills, Wipes and success rates for all Raid boss encounters.
 ** New: Added Translation interface to Records tab and messages.
 
+Alerts
+* New: Adjust the size of the Alert Text. (Mouse Wheel)
+* New: Adjust the size of the Alert Text on a per encounter basis (when override is enabled)
+* New: Adjust the size of the Alert Borders on a per encounter basis (when override is enabled)
+* New: Turn on/off Alert Text on a per encounter basis. (when override is enabled)
+* New: Turn on/off Alert Borders on a per encounter basis. (when override is enabled)
+
 Guilded Prophecy
 * Guurloth
 ** Fixed: Look Away warning now says so, instead of Jump (however amusing it was to watch my guild jump).
